--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,9 @@
   box-sizing: border-box;
 
 }
+
+.customCardShadow{
+  -webkit-box-shadow: 1px 4px 8px 0px rgba(217,214,217,1);
+-moz-box-shadow: 1px 4px 8px 0px rgba(217,214,217,1);
+box-shadow: 1px 4px 8px 0px rgba(217,214,217,1);
+}
